addtocart and wishlist work

--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -9,9 +9,20 @@
     z-index: 10;
     right: 59%;
     top: 20px;
-    color: blue;
+    color: rgb(255, 149, 0);
 }
 .hedder-yollow{
  background-color: blanchedalmond;
  padding: 23px;   
 }
+.circle {
+    width: 25px; /* Adjust size as needed */
+    height: 25px; /* Adjust size as needed */
+    background-color: #000000;
+    border-radius: 50%;
+    border: 2px solid #000000; /* Border color similar to Flipkart wishlist logo */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
