--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -9,11 +9,13 @@
             </div>
             <span class="fas fa-search search-icon"></span>
         </div>
-        <a (click)="goToWishList()" class="text-danger"><i class='fa fa-heart' style="cursor: pointer; color: red;" ></i></a>
+        <span   (click)="goToWishList()"  style="color: aliceblue; display: inline-flex;">WishList<i class='circle  fa fa-heart' style="cursor: pointer; color: red;" ></i></span>
+      
         <!-- <i class="far fa-heart " style="cursor: pointer;" ></i> -->
-        <button routerLink="viewcart" class="btn btn-primary" >
+
+        <button [routerLink]="'viewcart'" class="btn btn-primary" >
             <i style="font-size: 30px;" class="fas fa-cart-plus"></i>
-            <div style="font-size: 10px;" class="badge bg-danger">{{totalCartIteam.length}}</div>
+            <div style="font-size: 10px;" class="badge bg-danger"> {{totalCartIteam.length}}</div>
         </button>
     </div>
 </header>
