--- a/src/app/component/viewcart/viewcart.component.html
+++ b/src/app/component/viewcart/viewcart.component.html
@@ -7,7 +7,7 @@
           <div class="card border shadow-0">
             <div class="m-4">
               <h4 class="card-title mb-4">Your shopping cart</h4>
-              <ng-container *ngFor="let product of shoppingCartProduct">
+              <ng-container *ngFor="let product of shoppingCartProduct let i = index">
               
               <div class="card rounded-3 mb-4">
                   <!-- {{product.product.title}} -->
@@ -36,7 +36,7 @@
                       </div>
                       <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
                         <button class="btn btn-link px-2"
-                          (click)="decrement(product.product)">
+                          (click)="decrement(product.product,i)">
                           <i class="fas fa-minus"></i>
                         </button>
         
