--- a/src/app/shop/shop-component/wishlist/wishlist.component.html
+++ b/src/app/shop/shop-component/wishlist/wishlist.component.html
@@ -64,7 +64,7 @@
           <img src="assets/images/icon-empty-cart.png" class="img-fluid mb-4">
           <h3><strong>Empty Wishlist</strong></h3>
           <h4>You have no items in your wishlist. Start adding! :)</h4>
-          <a [routerLink]="'/'"  class="btn btn-light w-10 border mt-2"> Back to shop </a>
+          <a [routerLink]="''"  class="btn btn-light w-10 border mt-2"> Back to shop </a>
       </div>
       </ng-container>
       
