--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,28 +1,73 @@
 <header *ngIf="showHeader">
     <div class="navbar navbar-dark bg-primary shadow-sm">
         <div class="navbar-brand align-item-center d-flex">
-            <i style="font-size: 40px;" class="fas fa-shipping-fast">&nbsp;  
+            <i style="font-size: 30px;" class="fas fa-shipping-fast">&nbsp;
             </i>
-            <strong style="font-size: 30px; cursor: pointer;" [routerLink]="['/']">Tez-Mart</strong>
+            <strong style="font-size: 25px; cursor: pointer;" [routerLink]="['/']">Tez-Mart</strong>
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="search products">
             </div>
-            <span class="fas fa-search search-icon"></span>
+            <!-- <div class="container-fluid">
+                <a class="navbar-brand" [routerLink]="'login'">
+                User
+                </a>
+              </div> -->
+            <ul>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <!-- <i class="fas-solid fa-circle-user"></i> -->
+                        <i class="fas fa-user-circle fa-lg pe-2"></i>
+                        User
+                    </a>
+                    <ul class="dropdown-menu">
+                        <!-- <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li> -->
+                        <li class="margin-dropdown"><a class="dropdown-item" href="#"> <i
+                                    class="fas fa-user-alt pe-2"></i>My Profile</a></li>
+                        <li class="margin-dropdown"><a class="dropdown-item" href="#"> <i
+                                    class="fas  fa-heart pe-2"></i>WishList</a></li>
+                        <li class="margin-dropdown"><a class="dropdown-item" href="#"><i
+                                    class="fas solid fa-box pe-2"></i>Order</a></li>
+                        <li class="margin-dropdown"><a class="dropdown-item" href="#"><i
+                                    class="fas solid fa-tag pe-2"></i>Coupons</a></li>
+                        <li class="margin-dropdown"><a class="dropdown-item" href="#"> <i class="fa fa-cog fa-spin"></i>
+                                Settings</a></li>
+                        <li class="margin-dropdown"><a class="dropdown-item" href="#"> <i
+                                    class="fas fa-power-off pe-2"></i>Logout</a></li>
+                    </ul>
+
+                </li>
+            </ul>
+
+            <!-- <span (click)="goToWishList()" style="color: aliceblue; display: inline-flex; margin-left: 90px;">WishList<i
+                    class='circle  fa fa-heart' style="cursor: pointer; color: red;"></i></span> -->
+
+
+                        <button [routerLink]="'viewcart'" class="btn btn-primary">
+                            <i style="font-size: 25px;" class="fas fa-cart-plus"></i>
+                            <div style="font-size: 10px;" class="badge bg-danger"> {{totalCartIteam.length}}</div>
+                        </button>
+                        <ul>
+                
+                            <!-- <li class="margin-dropdown" ><a href=""><i class="fas-solid fa-ellipsis-vertical"></i></a> </li> -->
+                            <li style="color: white;" class="margin-dropdown"><a class="dropdown-item" href="#"> <i
+                                        class="fa fa-ellipsis-v pe-2" aria-hidden="true"></i></a></li>
+                            <!-- <li style="color: white;" class="margin-dropdown"><a class="dropdown-item" href="#"> <i class="fas fa-info-circle" aria-hidden="true"></i></a></li>
+                           <li style="color: white;" class="margin-dropdown"><a class="dropdown-item" href="#"><i class="fas-solid fa-ellipsis-vertical" aria-hidden="true"></i></a>more</li> -->
+                        </ul>
         </div>
-        <span   (click)="goToWishList()"  style="color: aliceblue; display: inline-flex;">WishList<i class='circle  fa fa-heart' style="cursor: pointer; color: red;" ></i></span>
-      
+
         <!-- <i class="far fa-heart " style="cursor: pointer;" ></i> -->
 
-        <button [routerLink]="'viewcart'" class="btn btn-primary" >
-            <i style="font-size: 30px;" class="fas fa-cart-plus"></i>
-            <div style="font-size: 10px;" class="badge bg-danger"> {{totalCartIteam.length}}</div>
-        </button>
+
+        <!-- <i class="fa-solid fa-ellipsis-vertical"></i> -->
     </div>
 </header>
 <header *ngIf="!showHeader">
     <div class="navbar navbar-dark bg-primary shadow-sm">
         <div class="navbar-brand align-item-center d-flex">
-            <i style="font-size: 40px;" class="fas fa-shipping-fast">&nbsp;  
+            <i style="font-size: 40px;" class="fas fa-shipping-fast">&nbsp;
             </i>
             <strong style="font-size: 30px; cursor: pointer;" [routerLink]="['/']">Tez-Mart</strong>
             <div class="form-group">
@@ -32,6 +77,6 @@
         </div>
         <!-- <a (click)="goToWishList()" class="text-danger"><i class='fa fa-heart' style="cursor: pointer; color: red;" ></i></a> -->
         <!-- <i class="far fa-heart " style="cursor: pointer;" ></i> -->
-       
+
     </div>
 </header>
