--- a/src/app/component/product/product.component.scss
+++ b/src/app/component/product/product.component.scss
@@ -8,10 +8,11 @@
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.2);
   border-radius: .25rem;
+  // opacity: 0.2;
 }
 
 .item img {
-  width: 64px;
+  width: 18px;
 }
 
 .item {
@@ -21,8 +22,12 @@
 
 .item a:hover {
   color: blue;
+  text-decoration: none;
 }
-
+.item a{
+  text-decoration: none;
+  color: #000000;
+}
 .card {
   padding: 20px;
   margin: 50px;
@@ -158,4 +163,200 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.card-img{
+  // padding-left: 3rem !important;
+  padding-right: 1rem !important;
+  padding-bottom: 3rem !important;
+  margin-bottom: -40px !important;
+  margin-left: 3rem !important;
+  padding-top: 0px;
+}
+
+/*
+*
+* ==========================================
+* CUSTOM UTILS CLASSES
+* ==========================================
+*
+*/
+
+
+/* EFFECT 1 ========================================== */
+
+.effect-1 {
+  position: relative;
+}
+.effect-1::before, .effect-1::after {
+  z-index: -1;
+  position: absolute;
+  content: "";
+  bottom: 15px;
+  left: 10px;
+  width: 50%;
+  top: 80%;
+  max-width: 300px;
+  background: #aaa;
+  box-shadow: 0 15px 10px #aaa;
+  transform: rotate(-3deg);
+}
+.effect-1::after {
+  transform: rotate(3deg);
+  right: 10px;
+  left: auto;
+}
+
+
+/* EFFECT 2 ========================================== */
+.effect-2::before{
+  position: absolute;
+  content: "";
+  z-index: -1;
+  bottom: 5px;
+  left: 30px;
+  right: 30px;
+  top: 80%;
+  background: #aaa;
+  box-shadow: 0 0 25px 17px #aaa;
+  border-radius: 100px/10px;
+}
+
+
+/* EFFECT 3 ========================================== */
+.effect-3 {
+  position: relative;
+}
+
+.effect-3::before {
+  z-index: -1;
+  position: absolute;
+  content: "";
+  bottom: 15px;
+  left: 10px;
+  width: 50%;
+  top: 80%;
+  max-width: 300px;
+  background: #aaa;
+  box-shadow: 0 15px 10px #aaa;
+  transform: rotate(-3deg);
+}
+
+
+/* EFFECT 4 ========================================== */
+.effect-4 {
+  position: relative;
+}
+
+.effect-4::before {
+  z-index: -1;
+  position: absolute;
+  content: "";
+  bottom: 15px;
+  right: 10px;
+  left: auto;
+  width: 50%;
+  top: 80%;
+  max-width: 300px;
+  background: #aaa;
+  box-shadow: 0 15px 10px #aaa;
+  transform: rotate(3deg);
+}
+
+
+/* EFFECT 5 ========================================== */
+.effect-5::before{
+position: absolute;
+content: "";
+z-index: -1;
+bottom: 20px;
+left: 8px;
+right: 8px;
+top: 20px;
+background: #aaa;
+box-shadow: 0 0 25px 10px #aaa;
+border-radius: 10px/40px;
+}
+.effect-5::after{
+position: absolute;
+content: "";
+z-index: -1;
+bottom: 14px;
+left: 30px;
+right: 30px;
+top: 14px;
+background: #aaa;
+box-shadow: 0 0 25px 17px #aaa;
+border-radius: 100px/10px;
+}
+
+/* EFFECT 6 ========================================== */
+.effect-6 {
+  position: relative;
+}
+
+.effect-6::before {
+position: absolute;
+content: "";
+z-index: -1;
+top: 26px;
+left: 12px;
+bottom: 50px;
+width: 20%;
+transform: rotate(-10deg);
+box-shadow: 0 10px 25px 10px #aaa;
+}
+
+.effect-6::after {
+position: absolute;
+content: "";
+z-index: -1;
+top: 26px;
+right: 10px;
+bottom: 50px;
+width: 20%;
+transform: rotate(8deg);
+box-shadow: 0 10px 25px 10px #aaa;
+}
+
+
+/*
+*
+* ==========================================
+* FOR DEMO PURPOSES
+* ==========================================
+*
+*/
+
+
+section {
+  position: relative;
+  z-index: 99;
+}
+
+.card {
+  margin-bottom: 2.5rem;
+  border: none;
+}
+
+
+// ######################## skeleton ##########################
+
+.skeleton-loader {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-skeleton {
+  width: 200px; /* Adjust width as needed */
+  height: 200px; /* Adjust height as needed */
+  background-color: #f0f0f0; /* Placeholder color */
+  margin-bottom: 10px;
+}
+
+.text-skeleton {
+  width: 100px; /* Adjust width as needed */
+  height: 20px; /* Adjust height as needed */
+  background-color: #f0f0f0; /* Placeholder color */
+  margin-bottom: 5px;
 }
