--- a/src/app/shop/shop-component/checkout/checkout.component.html
+++ b/src/app/shop/shop-component/checkout/checkout.component.html
@@ -3,7 +3,7 @@
   <!--Section: Design Block-->
   <section>
 
-    <form >
+    <form>
       <div class="row">
         <div class="col-md-7 card">
           <form [formGroup]="checkoutForm" (ngSubmit)=submit()>
@@ -15,17 +15,36 @@
                       <h5 class="mb-0 text-font text-uppercase " [attr.data-bs-toggle]="'collapse'"
                         [attr.data-bs-target]="'#collapseExample' + i" aria-expanded="true"
                         [attr.aria-controls]="'collapseExample' + i">
-                        Delivery address  </h5>
+                        Delivery address </h5>
                       <button class="btn btn-danger custom-btn" [hidden]="i===0" (click)=removeAddress(i)> Remove
                         Address</button>
                     </div>
                     <div class="collapse show" [attr.id]="'collapseExample' + i">
 
 
-                      <div class="form-outline">
-                        <label class="form-label" for="form11Example1">First name</label>
-                        <input type="text" id="form11Example1" formControlName="firstname" class="form-control" />
+
+                      <div class="form-group col-sm-3">
+                        <label for="name">firstname *</label>
+                        <input class="form-control" formControlName="firstname" type="text" id="criteria_name"
+                          name="criteria_name" placeholder="Criteria Name" />
+                        <!-- <span class="text-danger" *ngIf="
+                            checkoutForm.controls.firstname.controls[0].controls.firstname
+                              .touched &&
+                              checkoutForm.controls.firstname.controls[0].controls.firstname
+                              .errors?.required
+                          ">
+                          Criteria Name is required!
+                        </span> -->
                       </div>
+
+                      <!-- <div class="form-outline">
+                        <label class="form-label" for="form11Example1">First name</label>
+                        <input type="text" id="form11Example1" formControlName="firstname" class="form-control"
+                          [ngClass]="{ 'is-invalid': submitted && f['firstname'].errors ||f['firstname'].touched}" />
+                      </div>
+                      <div *ngIf="submitted && f['firstname'].errors" class="invalid-feedback">
+                        <div *ngIf="f['firstname'].errors['required']">Fullname is required</div>
+                      </div> -->
                       <div class="form-outline">
                         <label class="form-label" for="form11Example2">Last name</label>
                         <input type="text" formControlName="lastname" id="form11Example2" class="form-control" />
@@ -33,9 +52,18 @@
 
                       <div class="form-outline mb-4">
                         <label class="form-label" for="form11Example3">Address</label>
-                        <input type="text" formControlName="address" id="form11Example3" class="form-control" />
+                        <input 
+                        type="text" 
+                        formControlName="address"
+                         id="form11Example3" 
+                         class="form-control"
+                         [ngClass]="{'is-invalid' : submitted && f.address.errors }">
+                         <!-- [ngClass]="{ 'is-invalid': submitted && f['address'].errors ||f['address'].touched}"/> -->
                       </div>
 
+                      <div *ngIf="submitted && f['address'].errors" class="invalid-feedback">
+                        <div *ngIf="f['address'].errors['required']">Fullname is required</div>
+                      </div> 
                       <div class="form-outline mb-4">
                         <label class="form-label" for="form11Example4">Email</label>
                         <input type="email" formControlName="email" id="form11Example4" class="form-control" />
@@ -80,7 +108,7 @@
                 </div>
               </ng-container>
               <br>
-              <button class="btn " type="button"  (click)="addAddress()"> + Add New Address</button>
+              <button class="btn " type="button" (click)="addAddress()"> + Add New Address</button>
             </div>
           </form>
         </div>
@@ -149,6 +177,7 @@
                 <br>
                 <div class="text-center">
                   <button type="submit" class="btn  btn-primary col-md-10">Pay</button>
+                  <!-- <button type="submit" class="btn  btn-primary col-md-10">Pay wi</button> -->
                 </div>
               </div>
             </div>
@@ -156,6 +185,7 @@
         </div>
       </div>
     </form>
+    <button type="button" class="btn btn-danger" (click)="payWithRazor()">Pay </button>
   </section>
   <!--Section: Design Block-->
 </div>
