--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,8 +2,11 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
 *{
     padding: 0%;
+    
 
 }
 
