--- a/src/app/component/head-top/head-top.component.html
+++ b/src/app/component/head-top/head-top.component.html
@@ -9,14 +9,13 @@
                                 <i class="fas fa-solid fa-magnet fa-2x"></i>
                             </div>
                             <span>
-
                             </span>
                         </div>
                     </div>
                     <div class="col-11">
                         <div class="form-group has-search">
                             <span class="fa fa-search form-control-feedback"></span>
-                            <input type="text" class="form-control" placeholder="Search Product">
+                            <input type="text"   class="form-control" placeholder="Search Product"  [(ngModel)]="searchText">
                         </div>
                     </div>
                 </div>
