--- a/src/app/shop/shop-component/checkout/checkout.component.html
+++ b/src/app/shop/shop-component/checkout/checkout.component.html
@@ -176,7 +176,7 @@
                 </div>
                 <br>
                 <div class="text-center">
-                  <button type="submit" class="btn  btn-primary col-md-10">Pay</button>
+                  <button type="submit" class="btn  btn-primary col-md-10" (click)="payWithRazor()">Pay</button>
                   <!-- <button type="submit" class="btn  btn-primary col-md-10">Pay wi</button> -->
                 </div>
               </div>
